--- a/src/components/styles/ChangePasswordStyles.css
+++ b/src/components/styles/ChangePasswordStyles.css
@@ -10,10 +10,6 @@ html {
     color: #fff;
 }
 
-body {
-    min-height: 100vh;
-    background-color: dodgerblue;
-}
 
 .App {
     display: flex;
@@ -32,7 +28,7 @@ section {
     flex-direction: column;
     justify-content: flex-start;
     padding: 1rem;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgb(93, 142, 204);
 }
 
 form {
